// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-2 fFjEik"
  >
    <p
      class="header__Link-djltcn-4 frNmnj"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-2 fFjEik"
>
  <p
    class="header__Link-djltcn-4 gKxrvv"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 dUzWEZ"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-2 fFjEik"
  >
    <div
      class="header__Group-djltcn-1 foENYq"
    >
      <p
        class="header__Link-djltcn-4 gKxrvv"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-4 gKxrvv"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-1 foENYq"
    >
      <div
        class="header__Search-djltcn-6 kyhdaj"
      >
        <button
          class="header__SearchIcon-djltcn-7 bDFfPY"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-9 dZavCf"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-10 jgoYEk"
      >
        <button
          class="header__Picture-djltcn-3 bcIuaL"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-5 jWdOzy"
        >
          <div
            class="header__Group-djltcn-1 foENYq"
          >
            <button
              class="header__Picture-djltcn-3 bcIuaL"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-4 gKxrvv"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-djltcn-1 foENYq"
          >
            <p
              class="header__Link-djltcn-4 gKxrvv"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-2 header__Feature-djltcn-13 fFjEik jUaOrX"
  >
    <h2
      class="header__FeatureCallOut-djltcn-15 kHMguv"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-14 iuusjY"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-8 INvRu"
    >
      Play
    </button>
  </div>
</div>
`;
